--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,21 @@
-.App {
-  text-align: center;
+body{
+  font-family: 'Rubik, sans-serif';
+  font-size: 16px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* media Query */
+@media screen and (max-width: 960px){
+  /* .comment{
+    position: relative;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .commentActions{
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
   }
-  to {
-    transform: rotate(360deg);
-  }
+  .score_counter{
+    position: absolute;
+    bottom: 1rem;
+    left: 1rem;
+  } */
 }
